hphp/hack/test/typecheck/xhp_attr_13.php.exp
File "xhp_attr_13.php", line 7, characters 18-26:
Invalid argument (Typing[4110])
File "xhp_attr_13.php", line 11, characters 23-28:
This is a string
File "xhp_attr_13.php", line 4, characters 13-15:
It is incompatible with an int
